...
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <!-- Event list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
...
