...
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/waitlistButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Waitlist"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color"/>
...
